# Geometria

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  build.bat  vcpkg_install_deps.bat
base/: CMakeLists.txt
base/include/gmt/: Event.h  Observable.h  Weak.h  assets.h  debug.h  easings.h  gmt.h  path.h  utils.h
base/include/gmt/math/: 2d.h  Plane.h
base/source/: Observable.cpp  Weak.cpp  assets.cpp  debug.cpp  easings.cpp  path.cpp  utils.cpp
base/source/math/: Plane.cpp
base/tests/: 2d.cpp  CMakeLists.txt  Event.cpp  Observable.cpp  Plane.cpp  Random.cpp  Weak.cpp  path.cpp
extension/: CMakeLists.txt
extension/include/gmt/: GeometriaEx.h
extension/source/: GeometriaEx.cpp
render/: CMakeLists.txt
render/include/gmt/render/: Context.h  Framebuffer.h  Frustum.h  InputLayout.h  OpenGL.h  Program.h  Texture.h  VertexArray.h  VertexBuffer.h
render/source/: Context.cpp  Framebuffer.cpp  Frustum.cpp  InputLayout.cpp  Program.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
samples/: CMakeLists.txt
samples/android/: settings.gradle
samples/android/app/: build.gradle
samples/android/app/src/androidTest/java/com/geometria/samples/: ExampleInstrumentedTest.kt
samples/android/app/src/main/: AndroidManifest.xml
samples/android/app/src/main/cpp/: CMakeLists.txt  Samples.cpp
samples/android/app/src/main/java/com/geometria/samples/: MainActivity.kt
samples/android/app/src/main/res/values/: strings.xml  themes.xml
samples/android/app/src/main/res/values-night/: themes.xml
samples/android/app/src/test/java/com/geometria/samples/: ExampleUnitTest.kt
samples/android/gradle/wrapper/: gradle-wrapper.properties
samples/assets/shaders/: colored.frag  colored.vert  instanced.vert  white.vert
samples/source/: Common.cpp  Common.h  Config.cpp  Config.h  GlfwContext.cpp  GlfwContext.h  SampleMesh.cpp  SampleMesh.h  SamplesConfig.h.in  ShaderTypes.cpp  ShaderTypes.h  main.cpp
samples/source/scenes/: InstancingScene.cpp  InstancingScene.h  PostprocessScene.cpp  PostprocessScene.h
